--- a/public/stylesheets/dish.css
+++ b/public/stylesheets/dish.css
@@ -12,10 +12,12 @@
 }
 
 h1{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
   margin-top: 40px;
   margin-bottom: 40px;
   text-align: center;
-  font-size: 50px;
+  font-size: 70px;
   color: #0c0c0c;
   text-shadow: 3px 2px 2px rgb(100, 103, 104);
 }
