--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -138,6 +138,8 @@ nav {
 }
 
 h1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
   margin-top: 40px;
   text-align: justify;
   font-size: 50px;
