--- a/views/planification/InsertPlanification.ejs
+++ b/views/planification/InsertPlanification.ejs
@@ -223,7 +223,7 @@
                     url: "create/load/menus",
                     success: function (result) {
 
-                        $('.lista2 select').empty();
+                        // $('.lista2 select').empty();
                         // console.log("TAMAÑO------------> " + $('.lista2 select').length)
                         // if ($('.lista2 select').length === 0) {
                             $.each(result, function (i, menu) {
