--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,5 +1,6 @@
 .beauty_login{
-	max-width: 400px;
+    max-width: 500px;
+    min-height: 700px;
 	-webkit-box-shadow: 0px 0px 16px -6px rgba(0,0,0,0.55);
 	-moz-box-shadow: 0px 0px 16px -6px rgba(0,0,0,0.55);
 	box-shadow: 0px 0px 16px -6px rgba(0,0,0,0.55);
@@ -16,6 +17,7 @@
     border-top-left-radius: 20px;
     border-bottom: none;
 }
+
 
 .beauty_login .card-header .logo{
     height: 150px;
@@ -47,6 +49,10 @@ height: 2px;
 background: #ffffff85;
 }
 
+span{
+    font-size: 1.1em;
+    font-weight: bold;
+  }
 .beauty_login .card-header .login_with_text{
     text-align: center;
     font-size: 16px;
@@ -63,12 +69,21 @@ background: #ffffff85;
     background: linear-gradient(to top, rgba(146,221,205,1) 0%, rgba(7,110,128,1) 100%);
     color: #ffffff;
 }
+.btn{
+    font-size: 1.1em;
+  }
+  
+a{
+    
+    font-size: 1.1em;
+}
 
 .card-footer{
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: rgb(241, 245, 246); 
+    min-height: 125px;
 
 }
 .texto {
