--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>Registro de usuario - Jilorio</title>
+    <link rel="shortcut icon" href="https://doorcountypulse.com/wp-content/uploads/2020/03/forkspoon.png">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/register.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/register.css" />
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
 </head>
@@ -29,11 +31,11 @@
                             alt=""></div>
                     <div class="login_text d-flex flex-row justify-content-center align-items-center">
                         <span></span>
-                        <span class="text px-1">REGISTRO</span>
+                        <span class="text px-1"><%= items.myObject.register.principal %></span>
                         <span></span>
                     </div>
                     <div class="login_with_text">
-                        Login with your username and password or using your social media
+                        <span><%= items.myObject.register.texto %></span>
                     </div>
                 </div>
                 <div class="card-body">
@@ -68,13 +70,16 @@
                 </div>
                 <div class="card-footer d-flex flex-column">
                     <div class="d-flex justify-content-center align-items-center p-3 texto">
-                        Do have an account? <a href="/register" class="ml-2">Click here</a>
+                        <span><%= items.myObject.register.pregunta %></span> <a href="<%= items.myObject.register.href %>" class="ml-2"><%= items.myObject.register.click %></a>
                     </div>
                 </div>
             </div>
+     
         </div>
+    
 
     </div>
+
     <%- include ("../partials/footer.ejs"); %>
 </body>
 
